@@ -3,43 +3,29 @@ package GameTree;
 import View.Launcher;
 import Controller.Controller;
 import Controller.GridController;
-import RLearning.QTraining;
 import View.Square;
 import View.Player;
-import RLearning.QTraining;
 
-import java.util.ArrayList;
-import java.util.Random;
+import java.util.*;
 
 public class State {
 
     private ArrayList<Player> players;
+    private String hashedId = "";
     private int turn;
     private static State currentState;
     private ArrayList<State> children;
     private ArrayList<Integer> lines;
-
+    private static int nbOfids =0;
     /**
      * @param g       set of line
      * @param players assign an array list which contains all the player to a state
      */
     public State(ArrayList<Integer> g, ArrayList<Player> players) {
         this.lines = g;
-        // this.squares = Square.buildSquares(g);
         this.players = players;
     }
 
-    public State() {
-
-    }
-
-    /**
-     * use this state constructor only for the current state
-     */
-   /* public void setLinesAndSquares(ArrayList<Line> lines, ArrayList<Square> squares) {
-        this.lines = lines;
-        this.squares = squares;
-    }*/
     public void setLines(ArrayList<Integer> lines) {
         this.lines = lines;
     }
@@ -149,26 +135,26 @@ public class State {
     }
 
     //finds the lines that needs to be colored for mcts
-    public static int findDiffLine(ArrayList<Integer> state1, ArrayList<Integer> state2) {
+    public static int findDiffLine(ArrayList<Integer> parent, ArrayList<Integer> child) {
         Integer randomEmptyLine = null;
-        for (int line : state1) {
-            if (!state2.contains(line)) {
+        for (int line : parent) {
+            if (!child.contains(line)) {
                 return line;
             }
         }
         if (randomEmptyLine == null) {
             // System.out.println("parent and child are identical");
-            return state2.get(0);
+            return child.get(0);
         }
         return randomEmptyLine;
     }
 
-    public static int findDiffLine(State state1, State state2) {
-      //  System.out.println("state1");
-        //state1.display();
-        //System.out.println("state2");
-        //state2.display();
-        return findDiffLine(state1.getLines(), state2.getLines());
+    public static int findDiffLine(State parent, State child) {
+      //  System.out.println("parent");
+        //parent.display();
+        //System.out.println("child");
+        //child.display();
+        return findDiffLine(parent.getLines(), child.getLines());
     }
 
     //clears a state
@@ -183,7 +169,7 @@ public class State {
     }
 
     public void setPlayable() {
-        //currentState().setLines(GridController.getLinesIDs());
+        currentState().setLines(GridController.getLinesIds());
     }
 
     public int numberOfAvailableMoves() {
@@ -267,7 +253,7 @@ public class State {
                 counter++;
             }
         }
-        System.out.println(counter);
+       // System.out.println(counter);
         return counter;
     }
 
@@ -299,35 +285,88 @@ public class State {
     public State computeAChild(int line) {
 
         State childState = this.cloned();
-        childState.getLines().remove(Integer.valueOf(line));
+        childState.getLines().remove(new Integer(line));
         Controller.updateTurn(line, childState);
         return childState;
     }
 
-    public int getHashedID() {
+    public String getHashedID() {
         int id = 0;
         Random rand = new Random();
 
-        for(int i = 0 ; i < QTraining.width * QTraining.height; i ++ ){
-            id = id * QTraining.width;
-            id += rand.nextInt(1);
+//        for(int i = 0 ; i < QTraining.width * QTraining.height; i ++ ){
+//            id = id * QTraining.width;
+//            id += rand.nextInt(1);
+//        }
+
+        if(this.hashedId!="") {
+            return this.hashedId;
+        }else{
+
+              this.hashedId= toInt(this.orderedLines());
+            return this.hashedId;
         }
-        return id;
     }
 
-    public boolean isPlayable(int index) {
+    public ArrayList<Integer> orderedLines(){
+        ArrayList<Integer> result = new ArrayList<>();
+
+        for(Integer i : this.lines){
+                result.add(i);
+        }
+        Collections.sort(result);
+        return result;
+    }
+
+    public String toInt(ArrayList<Integer> a){
+        String toConvert = "";
+
+        for(Integer t : a){
+            toConvert+= t.toString();
+        }
+        return toConvert;
+//        int result=0;
+//        for(Integer i : a){
+//            if(i>9){
+//                result = result*100+i;
+//            }else{
+//                result= result*10+i;
+//            }
+//     }
+//        System.out.println(result);
+//        return result;
+    }
+    public boolean isPlayable(int index, State parent) {
         /**
          * TODO
          * at a given state, check if the index is a valid mode
          * which means it checks if the line which correseponds to
          * the index is possible to play
          */
-        for(Integer itg : getLines()){
-            if(itg==index){
-                return true;
+//
+//        System.out.println("parent");
+//        parent.display();
+//        System.out.println("child");
+//        this.display();
+
+        boolean playable = false;
+        for(Integer i : getLines()){
+            if(i==index){
+                playable = true;
             }
+            if(!parent.getLines().contains(i)){
+                    //System.out.println("this state is not playable");
+                    return false;
+            }
+
         }
-        return false;
+        if(!playable) {
+          //  System.out.println("line " + index + " is not playable");
+        }else{
+          //  System.out.println("line " + index + " is playable");
+        }
+        return playable;
+
     }
 
 
@@ -556,7 +595,7 @@ public class State {
         ArrayList<Square> result = new ArrayList<>();
         // it is assumed that the grid is squared
         for (int i = 0 ; i<gridWidth; i++){
-            result.add(GridController.squares.get((gridWidth+i*(gridWidth-1))-1));
+            result.add(GridController.getSquares().get((gridWidth+i*(gridWidth-1))-1));
             //System.out.println("index "+(gridWidth+i*(gridWidth-1))+ " id "+result.get(result.size()-1).getid());
         }
         return result;
@@ -566,7 +605,7 @@ public class State {
         ArrayList<Square> result = new ArrayList<>();
         // it is assumed that the grid is squared
         for (int i = 0 ; i<gridWidth; i++){
-            result.add(GridController.squares.get(i*(gridWidth+1)));
+            result.add(GridController.getSquares().get(i*(gridWidth+1)));
         }
         return result;
     }
